@@ -13,3 +13,4 @@ _None_
 * Added: ViaFree (Norge) channel with all ViaFree.no content (See #1430)
 * Fixed: Wrong subtitle language selected for ViaFree (Fixes #1431)
 * Fixed: Hide the description for SVT Play channels (Fixes #1422)
+* Fixed: UR Play (Sweden) not playing (Fixes #1435)
